# Skillbox_C_pp_prog

./: README.md
25_Project_Structure/Computer_Simulator/: CMakeLists.txt
25_Project_Structure/Computer_Simulator/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
25_Project_Structure/Operations_Simulator/: CMakeLists.txt
26_Introduction_to_OOP_Part_1/Desktop_Window_Manager/: main.cpp
26_Introduction_to_OOP_Part_1/Implementing_a_Mobile_Phone_Simulation/: main.cpp
27_Introduction_to_OOP_Part_2/Elven_Village/: main.cpp
27_Introduction_to_OOP_Part_2/Hierarchy_of_Geometric_Shapes/: main.cpp
27_Introduction_to_OOP_Part_2/Simulation_of_Company_Work/: main.cpp
28_Introduction_to_Multithreading/: 100_meter_swim.cpp  simulation_work_online_restaurant_kitchen.cpp  station_operation_simulator.cpp
29_Paradigms_OOP/: superdog.cpp
30_HTTP_requests_network/custom_requests/: CMakeLists.txt  сustom_requests.cpp  сustom_requests.h
30_HTTP_requests_network/queries_with_args/: CMakeLists.txt  queries_with_args.cpp  queries_with_args.h
30_HTTP_requests_network/сapture_web_page_title/: CMakeLists.txt  сapture_web_page_title.cpp  сapture_web_page_title.h
31_Additional_class_features_and_smart_pointers/: implementing_a_smart_pointer.cpp  using_the_smart_pointer.cpp
32_JSON_serialization_and_deserialization/: korol_i_shut.json
32_JSON_serialization_and_deserialization/company_data_model_on_Protobuf/: company_data_model_on_Protobuf.pb.cc  company_data_model_on_Protobuf.pb.h  company_data_model_on_Protobuf.proto
32_JSON_serialization_and_deserialization/information_about_the_film_from_the_cinema_portal/: information_about_the_film_from_the_cinema_portal.cpp
32_JSON_serialization_and_deserialization/movie_data_analysis/: films.json  movie_data_analysis.cpp
33_Using_Exceptions/arithmetic_mean_of_a_number_in_an_array/: arithmetic_mean_of_a_number_in_an_array.cpp
Using Exceptions/: shopping_cart_operation.cpp
(+127 files in other folders)
